--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 	<body>
 		<h1>Rekonektivno iscjeljivanje</h1>
 
+		<p><b>Riječ iscjeljivanje ne znači nikako upotrebu bilo kakve magije, učenja svetih zapisa, pisama, prizivanja duhova, svetaca, buda niti bilo čega sličnog.<br>Značenje same riječi
+			ISCJELJIVANJE znači DOVOĐENJE KOMPLETNOG LJUDSKOG BIĆA U STANJE BALANSA I RAVNOTEŽE NA SVIM NIVOIMA KAKO FIZIČKOM,<br>tako PSIHIČKOM, EMOTIVNOM i DUŠEVNOM,
+			a ne samo odsustvo određenog simptoma bolesti!</b></p>
+
 		<p>Rekonektivno iscjeljivanje je savremeni fenomen u području iscjeljivanja, te je namijenjeno onima:</p>
 
 		<ol>
