Jos jedan novi paragraf

--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
 		<p>Rekonektivno iscjeljivanje je <b>holistički, neinvazivni pristup zdravlju koje nudi blagodati bez rizika.</b> Učinkovito je kod ponovnog uspostavljanja blagostanja na svim nivoima<br> kao i kod prevencije bolesti. Fokusirano je na uzroke, umjesto na simptome te bazično radi na povratku u stanje ravnoteže i cjelovitosti i na taj način poništava temelje bolesti.<br>Rekonektivno iscjeljivanje pomaže tijelu da se vrati u izvorno, zdravo stanje na staničnom nivou, a da pritom ništa ne dodaje niti oduzima.</p>
 		<p><i>Frekvencije Rekonektivnog iscjeljivanja donose iscjeljenje u širem spektru energije, svjetlosti i informacija koji harmonično utiče na tijelo i um.</i></p>
 		<p>Priroda frekvencija  je realna, opipljiva i mjerljiva, te je možete zaista osjetiti, a sa druge strane je izvan onoga što je bilo klasično poznato kao energetsko iscjeljivanje.<br>Rekonektivno iscjeljivanje ne ‘tretira’ nešto određeno, ne zahtijeva dijagnozu, složene korake, postupke ili rituale  i stoga nećete biti pitani o konkretnim razlozima dolaska na seansu.</p>
-		
+		<p>Jednostavno povezujući se sa poljem frekvencija Rekonektivnog  iscjeljivanja, dolazi do promjena koje su za svakog ponaosob u tom trenutku optimalne. Neka iscjeljenja budu trenutna,<br>dok je za neke potrebno vrijeme da se <i>„odmotaju“.</i> Iskustva su različita – za nekoga je to mentalna jasnoća, iskustvo obilja u odnosima, duhovni napredak, rješenje zdravstvenih izazova...</p>
+		<p>Ako za vrijeme iscjeljivanja dozvolite sebi da se ponovno vratite u ravnotežu, kao što je to slučaj s mnogima, onda se to i dogodi. Iscjeljenje se ovdje ne sastoji u uklanjanju simptoma,<br>nestanku bolesti, bola, slabosti i drugih smetnji normalnom funkcioniranju, nego upravo u dovođenju osobe u ravnotežu i stanje cjelovitosti na svim razinama.</p>
+
 	</body>
 
 	</html>
