--- a/index.html
+++ b/index.html
@@ -29,6 +29,12 @@
 		<p>Jednostavno povezujući se sa poljem frekvencija Rekonektivnog  iscjeljivanja, dolazi do promjena koje su za svakog ponaosob u tom trenutku optimalne. Neka iscjeljenja budu trenutna,<br>dok je za neke potrebno vrijeme da se <i>„odmotaju“.</i> Iskustva su različita – za nekoga je to mentalna jasnoća, iskustvo obilja u odnosima, duhovni napredak, rješenje zdravstvenih izazova...</p>
 		<p>Ako za vrijeme iscjeljivanja dozvolite sebi da se ponovno vratite u ravnotežu, kao što je to slučaj s mnogima, onda se to i dogodi. Iscjeljenje se ovdje ne sastoji u uklanjanju simptoma,<br>nestanku bolesti, bola, slabosti i drugih smetnji normalnom funkcioniranju, nego upravo u dovođenju osobe u ravnotežu i stanje cjelovitosti na svim razinama.</p>
 
+		<h2>Prirodni tok seanse</h2>
+
+		<p><b><i>“Uđite. Lezite i zatvorite oči. Pustite sebe da plutate, ali nemojte zaspati.”</i></b></p>
+		<p>Od Vas se očekuje da legnete leđima udobno (bez jastuka) na masažni krevet, da zatvorite oči i da budete relaksirani. Prepustite se. Opažajte zbivanja koja se odvijaju u tijelu i umu.<br>Da bi najprikladnije primili energiju, svjetlost i informaciju, najbolje da budete u stanju otvorenosti i iščekivanja, bez konkretnih očekivanja i vezivanja za krajnji tok i efekat.<br>Seansa traje oko 30 min. Imajte u vidu da prije seanse isključite mobilni aparat. Nakit možete da zadržite na vama, ako je udoban.</p>
+		<p>Vaše prepuštanje seansi je od vitalnog značaja za njen tok. To znači ne truditi se, ne usmjeravati energiju, ne koncentrisati se, ne vizualizirati, ne meditirati, ne koristiti posebne<br>tehnike disanja…Opažajte, prepustite se.</p>
+ 
 	</body>
 
 	</html>
